--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,5 +4,10 @@
 @import "global/fonts";
 
 /* BLOCKS */
-@import "blocks/header";
+@import "blocks/main-header";
 @import "blocks/page";
+@import "blocks/header-logo";
+@import "blocks/main-nav";
+@import "blocks/nav-menu";
+@import "blocks/nav-user";
+@import "blocks/visually-hidden";
