--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,5 +1,4 @@
 .page {
-  height: 100%;
   background: #ffffff;
 }
 
@@ -9,4 +8,5 @@
   line-height: 20px;
   font-weight: 400;
   width: 320px;
+  margin: 0;
 }
