--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,1 +1,17 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
+html {
+  height: 100%;
+}
+
+img {
+  height: auto;
+  object-fit: contain;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
