--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,16 +1,21 @@
 /* здесь подключите шрифты*/
 @font-face {
-  font-display: swap;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  src: url("/source/fonts/Montserrat-Regular.woff") format("woff");
+  src: url("/fonts/montserrat-regular.woff") format("woff");
 }
 
 @font-face {
-  font-display: swap;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/montserrat-medium.woff") format("woff");
+}
+
+@font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  src: url("/source/fonts/Montserrat-Bold.woff") format("woff");
+  src: url("/fonts/montserrat-bold.woff") format("woff");
 }
