--- a/source/less/blocks/nav-user.less
+++ b/source/less/blocks/nav-user.less
@@ -6,16 +6,17 @@
   margin: 0;
   display: flex;
   padding-left: 0;
+  flex-wrap: wrap;
+
+  & li:nth-child(2) {
+    margin-right: 60px;
+  }
 }
 
-.nav-user__item {
-  padding: 22px;
-  height: 16px;
-}
-
-.nav-user__toggle {
-  border: none;
-  background-color: #ffffff;
-  padding: 0;
-  height: 16px;
+.nav-user__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
 }
