--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,13 +1,20 @@
 /* GLOBAL */
-@import "global/variables.less";
-@import "global/global.less";
-@import "global/fonts.less";
+@import "global/variables";
+@import "global/global";
+@import "global/fonts";
 
 /* BLOCKS */
-@import "blocks/main-header.less";
-@import "blocks/page.less";
-@import "blocks/header-logo.less";
-@import "blocks/main-nav.less";
-@import "blocks/nav-menu.less";
-@import "blocks/nav-user.less";
-@import "blocks/visually-hidden.less";
+@import "blocks/main-header";
+@import "blocks/page";
+@import "blocks/header-logo";
+@import "blocks/main-nav";
+@import "blocks/nav-menu";
+@import "blocks/nav-user";
+@import "blocks/visually-hidden";
+@import "blocks/catalog";
+@import "blocks/filter";
+@import "blocks/price";
+@import "blocks/milk";
+@import "blocks/country";
+@import "blocks/radio-label";
+@import "blocks/checkbox-label";
