--- a/source/less/blocks/country.less
+++ b/source/less/blocks/country.less
@@ -14,10 +14,15 @@
 
 .country__list {
   padding-left: 0;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 34px;
+
+  & li:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .country__item {
   position: relative;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
