--- a/source/less/blocks/milk.less
+++ b/source/less/blocks/milk.less
@@ -14,7 +14,12 @@
 
 .milk__list {
   padding-left: 0;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 23px;
+
+  & li:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .milk__item {
