--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,6 @@
 @import "blocks/country";
 @import "blocks/radio-label";
 @import "blocks/checkbox-label";
+@import "blocks/filter-buttons";
+@import "blocks/price-label";
+@import "blocks/range-scale";
