--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,6 +1,6 @@
 .catalog {
   background: #f8f8f8;
-  padding: 5px 20px 44px;
+  padding: 50px 20px 44px 20px;
 }
 
 .catalog__description {
@@ -24,5 +24,13 @@
 }
 
 .catalog__filter {
-  margin-bottom: 36px;
+  margin-bottom: 40px;
+}
+
+.catalog__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0 0 40px 0;
+  padding: 0;
 }
