--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,9 @@
 @import "blocks/nav-menu";
 @import "blocks/nav-user";
 @import "blocks/visually-hidden";
+@import "blocks/slider";
+@import "blocks/advantages";
+@import "blocks/advantages-card";
 @import "blocks/catalog";
 @import "blocks/filter";
 @import "blocks/price";
@@ -21,3 +24,14 @@
 @import "blocks/filter-buttons";
 @import "blocks/price-label";
 @import "blocks/range-scale";
+@import "blocks/sort";
+@import "blocks/card";
+@import "blocks/pagination";
+@import "blocks/main-footer";
+@import "blocks/social";
+@import "blocks/market";
+@import "blocks/media";
+@import "blocks/contacts";
+@import "blocks/develop";
+@import "blocks/button";
+@import "blocks/map";
