настраивает по пиксель перфекту

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  padding: 20px 0;
+  padding: 21px 0;
 }
 
 .contacts__title {
@@ -39,11 +39,13 @@
 .contacts__adress-svg {
   width: 13px;
   height: 16px;
+  padding-top: 4px;
 }
 
 .contacts__phone-svg {
   width: 13px;
   height: 16px;
+  padding-top: 4px;
 }
 
 .contacts__adress-text {
