--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -6,4 +6,28 @@
 
 .main-header__logo {
   margin-right: 68px;
+
+  @media (min-width: 768px) {
+    margin-right: 48px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-right: 268px;
+  }
+}
+
+.main-header__user {
+  @media (min-width: 768px) {
+    order: 2;
+  }
+}
+
+.main-header__menu {
+  @media (min-width: 768px) {
+    margin-right: 60px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-right: 162px;
+  }
 }
