--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -4,29 +4,29 @@
   text-align: center;
 }
 
-.advantages__badge {
-  margin: 0 0 4px 0;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 0.04em;
+.advantages__text {
   text-transform: uppercase;
   color: #7859cf;
+  margin: 0 0 4px 0;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 700;
+  letter-spacing: 0.04em;
   max-width: 280px;
 }
 
 .advantages__title {
   margin: 0 0 36px 0;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
   color: #333333;
+  font-weight: 700;
+  line-height: 36px;
+  font-size: 24px;
   max-width: 280px;
 }
 
 .advantages__list {
   display: flex;
   flex-direction: column;
-  gap: 32px;
   margin-bottom: 0;
+  gap: 32px;
 }
