--- a/source/less/blocks/nav-menu.less
+++ b/source/less/blocks/nav-menu.less
@@ -1,10 +1,26 @@
 .nav-menu {
   width: 320px;
+
+  @media (min-width: 768px) {
+    width: 399px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 459px;
+  }
 }
 
 .nav-menu__list {
   padding: 0;
   margin: 0;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
+
+  @media (min-width: 1440px) {
+    gap: 20px;
+  }
 
   & li:last-child::after {
     content: "";
@@ -13,6 +29,10 @@
     width: 320px;
     height: 1px;
     background: #f0ebff;
+
+    @media (min-width: 768px) {
+      display: none;
+    }
   }
 }
 
@@ -26,6 +46,10 @@
   text-transform: uppercase;
   color: #333333;
   letter-spacing: 0.02em;
+
+  @media (min-width: 768px) {
+    padding: 32px 20px;
+  }
 }
 
 .nav-menu__item {
@@ -38,6 +62,10 @@
     width: 320px;
     height: 1px;
     background: #f0ebff;
+
+    @media (min-width: 768px) {
+      display: none;
+    }
   }
 }
 
@@ -51,6 +79,10 @@
   top: 0;
   right: 0;
   cursor: pointer;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
 .nav-menu--closed .nav-menu__toggle::before {
@@ -88,6 +120,10 @@
 
 .nav-menu--closed .nav-menu__container {
   display: none;
+
+  @media (min-width: 768px) {
+    display: block;
+  }
 }
 
 .nav-menu--nojs .nav-menu__container {
