--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -10,4 +10,12 @@
   width: 320px;
   margin: 0 auto;
   color: #333333;
+
+  @media (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 1440px;
+  }
 }
