--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,7 +1,6 @@
 .slider {
   padding: 0;
   display: flex;
-  flex-direction: row;
   background: #f3ebe1;
   text-align: center;
 }
@@ -26,7 +25,7 @@
   margin: 20px 0 60px 0;
 }
 
-.slider__badge {
+.slider__text {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #7859cf;
