--- a/source/less/blocks/country.less
+++ b/source/less/blocks/country.less
@@ -21,6 +21,10 @@
   & li:last-child {
     margin-bottom: 0;
   }
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
 .country__item {
