--- a/source/less/blocks/filter-buttons.less
+++ b/source/less/blocks/filter-buttons.less
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .filter-buttons__apply {
@@ -9,6 +13,7 @@
   align-items: center;
   width: 160px;
   height: 45px;
+  font-weight: 400;
   font-size: 13px;
   line-height: 24px;
   background: #7859cf;
@@ -16,11 +21,20 @@
   color: #ffffff;
   border-radius: 4px;
   margin-bottom: 24px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+    margin-left: 180px;
+    margin-right: 29px;
+    width: 148px;
+    height: 40px;
+  }
 }
 
 .filter-buttons__reset {
   justify-content: center;
   align-items: center;
+  font-weight: 400;
   width: 160px;
   height: 45px;
   font-size: 14px;
@@ -29,4 +43,9 @@
   border: none;
   color: #7859cf;
   border-radius: 4px;
+
+  @media (min-width: 768px) {
+    width: 139px;
+    height: 40px;
+  }
 }
