--- a/source/less/blocks/radio-label.less
+++ b/source/less/blocks/radio-label.less
@@ -12,6 +12,7 @@
   border: 2px solid #bdbdbd;
   bottom: -1px;
   left: 0;
+  background: #ffffff;
 }
 
 .radio-label__input:checked + .radio-label__mark::after {
