--- a/source/less/blocks/range-scale.less
+++ b/source/less/blocks/range-scale.less
@@ -4,6 +4,11 @@
   margin-bottom: 37px;
   height: 2px;
   background: #e2e2e2;
+
+  @media (min-width: 768px) {
+    width: 220px;
+    margin-bottom: 32px;
+  }
 }
 
 .range-scale__bar {
