--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -1,3 +1,26 @@
+.filter__wrapper {
+  @media (min-width: 768px) {
+    display: flex;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+}
+
 .filter__price {
-  margin-bottom: 24.5px;
+  margin: 0 0 27px;
+
+  @media (min-width: 768px) {
+    margin-right: 21px;
+    margin-left: 7px;
+    margin-bottom: 0;
+  }
+}
+
+.filter__milk {
+  margin: 0;
+
+  @media (min-width: 768px) {
+    margin-right: 36px;
+    margin-bottom: 0;
+  }
 }
