--- a/source/less/blocks/price-label.less
+++ b/source/less/blocks/price-label.less
@@ -1,5 +1,3 @@
-
-
 .price-label__input {
   font-family: "Montserrat", "Arial", sans-serif;
   font-weight: 500;
@@ -13,8 +11,18 @@
   background: #ffffff;
   box-sizing: border-box;
   text-align: center;
+
+  @media (min-width: 768px) {
+    width: 92px;
+    height: 40px;
+    padding: 8px 10px;
+  }
 }
 
 .price-label__input-min {
   margin-right: 44px;
+
+  @media (min-width: 768px) {
+    margin-right: 35px;
+  }
 }
