--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -2,6 +2,11 @@
   display: flex;
   margin: 0 0 16px 0;
   padding-left: 3px;
+
+  @media (min-width: 768px) {
+    justify-content: end;
+    margin-bottom: 27px;
+  }
 }
 
 .sort__description {
