настраивает адаптив каталога для пк

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -11,6 +11,10 @@
     padding: 50px 30px 30px 29px;
     min-height: 440px;
   }
+
+  @media (min-width: 1440px) {
+    width: 317px;
+  }
 }
 
 .card__img {
