--- a/source/less/blocks/country.less
+++ b/source/less/blocks/country.less
@@ -3,6 +3,10 @@
   padding: 0;
   padding-left: 2px;
   margin: 0;
+
+  @media (min-width: 1440px) {
+    padding-left: 0;
+  }
 }
 
 .country__title {
