--- a/source/less/blocks/price-label.less
+++ b/source/less/blocks/price-label.less
@@ -17,6 +17,10 @@
     height: 40px;
     padding: 8px 10px;
   }
+
+  @media (min-width: 1440px) {
+    width: 134px;
+  }
 }
 
 .price-label__input-min {
@@ -24,5 +28,9 @@
 
   @media (min-width: 768px) {
     margin-right: 35px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-right: 50px;
   }
 }
