--- a/source/less/blocks/range-scale.less
+++ b/source/less/blocks/range-scale.less
@@ -9,6 +9,10 @@
     width: 220px;
     margin-bottom: 32px;
   }
+
+  @media (min-width: 1440px) {
+    width: 318px;
+  }
 }
 
 .range-scale__bar {
