--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -40,8 +40,29 @@
   }
 }
 
+.catalog__wrapper {
+  @media (min-width: 1440px) {
+    display: grid;
+    grid-template-columns: 318px 1011px;
+    grid-template-rows: 26px 950px 40px;
+    gap: 30px;
+  }
+}
+
 .catalog__filter {
   margin-bottom: 40px;
+
+  @media (min-width: 1440px) {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+}
+
+.catalog__sort {
+  @media (min-width: 1440px) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
 }
 
 .catalog__list {
@@ -56,5 +77,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 70px;
+  }
+
+  @media (min-width: 1440px) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+}
+
+.catalog__pagination {
+  @media (min-width: 1440px) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    justify-self: end;
+    padding-top: 30px;
   }
 }
