--- a/source/less/blocks/filter-buttons.less
+++ b/source/less/blocks/filter-buttons.less
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 160px;
-  height: 45px;
+  min-height: 45px;
   font-weight: 400;
   font-size: 13px;
   line-height: 24px;
@@ -27,7 +27,14 @@
     margin-left: 180px;
     margin-right: 29px;
     width: 148px;
-    height: 40px;
+    min-height: 40px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-left: 0;
+    width: 153px;
+    margin-right: 15px;
+    font-size: 14px;
   }
 }
 
@@ -36,7 +43,7 @@
   align-items: center;
   font-weight: 400;
   width: 160px;
-  height: 45px;
+  min-height: 45px;
   font-size: 14px;
   line-height: 24px;
   background: #ffffff;
@@ -46,6 +53,6 @@
 
   @media (min-width: 768px) {
     width: 139px;
-    height: 40px;
+    min-height: 40px;
   }
 }
