--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -4,6 +4,10 @@
     margin-bottom: 40px;
     flex-wrap: wrap;
   }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 39px;
+  }
 }
 
 .filter__price {
@@ -13,6 +17,10 @@
     margin-right: 21px;
     margin-left: 7px;
     margin-bottom: 0;
+  }
+
+  @media (min-width: 1440px) {
+    margin-left: 0;
   }
 }
 
