--- a/source/less/blocks/milk.less
+++ b/source/less/blocks/milk.less
@@ -23,6 +23,10 @@
   & li:last-child {
     margin-bottom: 0;
   }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 28px;
+  }
 }
 
 .milk__item {
