--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -15,6 +15,10 @@
   font-size: 16px;
   line-height: 24px;
   color: #333333;
+
+  @media (min-width: 1440px) {
+    padding-top: 2px;
+  }
 }
 
 .sort__select {
