--- a/source/less/blocks/nav-user.less
+++ b/source/less/blocks/nav-user.less
@@ -45,11 +45,15 @@
 }
 
 .nav-user__svg-user {
-  margin-right: 8px;
+  @media (min-width: 1440px) {
+    margin-right: 8px;
+  }
 }
 
 .nav-user__svg-basket {
-  margin-right: 8px;
+  @media (min-width: 1440px) {
+    margin-right: 8px;
+  }
 }
 
 .nav-user__description {
