--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -3,26 +3,62 @@
   display: flex;
   background: #f3ebe1;
   text-align: center;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+
+  @media (min-width: 768px) {
+    background: linear-gradient(to bottom, #f3ebe1 640px, transparent 640px);
+    background-color: #ffffff;
+  }
+
+  @media (min-width: 1440px) {
+    background: linear-gradient(to bottom, #f3ebe1 714px, transparent 640px);
+  }
 }
 
 .slider__button {
   border: 0;
-  padding: 0;
+  display: flex;
+  align-self: flex-start;
+  padding: 318px 0 318px 0;
   background-color: rgba(256, 256, 256, 0);
-  margin: auto;
+  margin: auto 0;
+
+  @media (min-width: 768px) {
+    padding: 310px 30px 310px 30px;
+    margin: 0;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 347px 30px 347px 30px;
+  }
 }
 
 .slider.svg {
-  min-width: 20px;
-  min-height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .slider__card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 280px;
+  width: 280px;
   margin: 20px 0 60px 0;
+
+  @media (min-width: 768px) {
+    width: 608px;
+    margin: 0;
+    padding-top: 60px;
+  }
+
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    width: 1280px;
+    padding-top: 30px;
+    align-items: normal;
+  }
 }
 
 .slider__text {
@@ -36,7 +72,17 @@
 }
 
 .slider__img {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+
+  @media (min-width: 768px) {
+    order: 1;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 1440px) {
+    order: 0;
+    margin: 0 30px 0 25px;
+  }
 }
 
 .slider__title {
@@ -46,6 +92,12 @@
   line-height: 48px;
   letter-spacing: 0.02em;
   color: #333333;
+
+  @media (min-width: 768px) {
+    font-size: 56px;
+    line-height: 80px;
+    margin-bottom: 16px;
+  }
 }
 
 .slider__description {
@@ -53,12 +105,41 @@
   font-size: 14px;
   line-height: 20px;
   color: #333333;
+
+  & br {
+    display: none;
+  }
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 32px;
+    max-width: 580px;
+
+    & br {
+      display: block;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 40px;
+  }
 }
 
 .slider__buy {
   display: flex;
+  flex-direction: row;
   max-width: 280px;
   justify-content: center;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: 1440px) {
+    margin: 0 auto 0 0;
+    justify-content: start;
+  }
 }
 
 .slider__price-old {
@@ -88,4 +169,45 @@
   font-size: 16px;
   line-height: 24px;
   max-width: 134px;
+}
+
+.slider__container {
+  @media (min-width: 1440px) {
+    margin-top: 150px;
+    text-align: start;
+  }
+}
+
+.slider__step-container {
+  display: none;
+  flex-wrap: wrap;
+  gap: 8px;
+  position: absolute;
+  bottom: 60px;
+  left: 613px;
+
+  @media (min-width: 1440px) {
+    display: flex;
+  }
+}
+
+.slider__step {
+  width: 62px;
+  height: 24px;
+  background: #f3ebe1;
+  border: none;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 62px;
+    height: 4px;
+    background: #ffffff;
+  }
+}
+
+.slider__step--current {
+  &::after {
+    background: #7859cf;
+  }
 }
