--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -7,7 +7,7 @@
   }
 
   @media (min-width: 1440px) {
-    padding: 100px 40px 120px;
+    padding: 100px 40px 150px;
   }
 }
 
@@ -50,7 +50,11 @@
 }
 
 .catalog__filter {
-  margin-bottom: 40px;
+  margin-bottom: 37px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 40px;
+  }
 
   @media (min-width: 1440px) {
     grid-column: 1/2;
@@ -72,6 +76,7 @@
   padding: 0;
   gap: 20px;
 
+
   @media (min-width: 768px) {
     gap: 30px;
     flex-direction: row;
@@ -82,6 +87,7 @@
   @media (min-width: 1440px) {
     grid-column: 2/3;
     grid-row: 2/3;
+    grid-row-gap: 33px;
   }
 }
 
