--- a/source/less/blocks/develop.less
+++ b/source/less/blocks/develop.less
@@ -2,6 +2,15 @@
   padding: 0 37px;
   display: flex;
   gap: 3px;
+  justify-content: center;
+
+  @media (min-width: 768px) {
+    padding: 9px 37px 0 37px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 0;
+  }
 }
 
 .develop__text {
