--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -1,9 +1,14 @@
 .pagination__list {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
   gap: 20px;
+
+  @media (min-width: 768px) {
+    justify-content: end;
+  }
 }
 
 .pagination__svg {
@@ -11,6 +16,10 @@
 
   &&--right {
     transform: rotate(180deg);
+  }
+
+  @media (min-width: 768px) {
+    display: none;
   }
 }
 
@@ -26,9 +35,22 @@
   color: #7859cf;
   border-radius: 4px;
 
-  &&--current {
+  &--current {
     color: #333333;
     font-weight: 600;
+    background: rgba(255, 255, 255, 0);
+  }
+
+  &--previous {
+    @media (min-width: 768px) {
+      min-width: 91px;
+    }
+  }
+
+  &--next {
+    @media (min-width: 768px) {
+      min-width: 104px;
+    }
   }
 }
 
@@ -40,4 +62,19 @@
   margin: 0;
   min-width: 40px;
   min-height: 40px;
+}
+
+.pagination__previous,
+.pagination__next {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 20px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7859cf;
+  }
 }
