добавляет состояния хедера

--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -77,6 +77,10 @@
   height: 1px;
   left: 0;
   background: #f0ebff;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
 .main-footer__develop {
@@ -91,6 +95,10 @@
   height: 1px;
   left: 0;
   background: #f0ebff;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
 .main-footer__text {
