--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -99,3 +99,9 @@
     padding-top: 30px;
   }
 }
+
+.catalog__item--current {
+  @media (min-width: 1440px) {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  }
+}
