добавляет состояния футера

--- a/source/less/blocks/develop.less
+++ b/source/less/blocks/develop.less
@@ -21,7 +21,7 @@
   color: #bdbdbd;
 }
 
-.develop__button-text {
+.develop__wrapper-text {
   margin: 0;
   color: #bdbdbd;
   font-weight: 400;
@@ -29,12 +29,29 @@
   line-height: 16px;
 }
 
-.develop__button {
+.develop__wrapper {
   display: flex;
   gap: 4px;
 }
 
-.develop__button-svg {
+.develop__svg {
   width: 12px;
   height: 16px;
+}
+
+.develop__link {
+  fill: #bdbdbd;
+
+  &:focus {
+    outline: none;
+    fill: #7859cf;
+  }
+
+  & :hover {
+    fill: #7859cf;
+  }
+
+  & :active {
+    fill: #593cac;
+  }
 }
