--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -22,3 +22,20 @@
   justify-content: center;
   align-items: center;
 }
+
+.social__link {
+  fill: #bdbdbd;
+
+  &:hover {
+    fill: #7859cf;
+  }
+
+  &:active {
+    fill: #7859cf;
+  }
+
+  &:focus {
+    fill: #7859cf;
+    outline: none;
+  }
+}
