состояния радио и чекбоксов

--- a/source/less/blocks/range-scale.less
+++ b/source/less/blocks/range-scale.less
@@ -20,6 +20,16 @@
   background: #9070ec;
   position: absolute;
   top: -1px;
+  left: 12px;
+  width: 236px;
+
+  @media (min-width: 768px) {
+    width: 176px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 275px;
+  }
 }
 
 .range-scale__toggle {
