--- a/source/less/blocks/swiper.less
+++ b/source/less/blocks/swiper.less
@@ -1,67 +1,94 @@
-.slider {
-  padding: 0;
-  display: flex;
+.swiper {
+  position: relative;
+}
+
+.swiper-wrapper .swiper-slide {
+  min-width: 320px;
+  width: 280px;
+  padding: 20px 0 60px 0;
   background: #f3ebe1;
   text-align: center;
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: 768px) {
+    width: 768px;
+    padding: 60px 0 0 0;
     background: linear-gradient(to bottom, #f3ebe1 640px, transparent 640px);
     background-color: #ffffff;
+    gap: 20px;
   }
 
   @media (min-width: 1440px) {
     background: linear-gradient(to bottom, #f3ebe1 714px, transparent 640px);
-  }
-}
-
-.slider__button {
-  border: 0;
-  display: flex;
-  align-self: flex-start;
-  padding: 318px 0 318px 0;
-  background-color: rgba(256, 256, 256, 0);
-  margin: auto 0;
-
-  @media (min-width: 768px) {
-    padding: 310px 30px 310px 30px;
-    margin: 0;
-  }
-
-  @media (min-width: 1440px) {
-    padding: 347px 30px 347px 30px;
-  }
-}
-
-.slider.svg {
-  width: 20px;
-  height: 20px;
-}
-
-.slider__card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 280px;
-  margin: 20px 0 60px 0;
-
-  @media (min-width: 768px) {
-    width: 608px;
-    margin: 0;
-    padding-top: 60px;
-  }
-
-  @media (min-width: 1440px) {
     flex-direction: row;
-    width: 1280px;
-    padding-top: 30px;
-    align-items: normal;
+    padding: 30px 80px 79px 105px;
+    box-sizing: border-box;
+    gap: 30px;
   }
 }
 
-.slider__text {
+.swiper__img {
+  margin-bottom: 5px;
+
+  @media (min-width: 768px) {
+
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 1440px) {
+
+    margin: 0;
+  }
+}
+
+.swiper div.swiper-pagination {
+  display: none;
+
+  @media (min-width: 1440px) {
+    bottom: 70px;
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 100px;
+    box-sizing: border-box;
+  }
+}
+
+.swiper .swiper-pagination span.swiper-pagination-bullet {
+  @media (min-width: 1440px) {
+    width: 62px;
+    height: 4px;
+    background: #ffffff;
+    border-radius: 0;
+    opacity: 1;
+    margin: 0;
+  }
+
+  &-active {
+    background: #7859cf;
+  }
+}
+
+.swiper__container {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    order: -1;
+    width: 608px;
+  }
+
+  @media (min-width: 1440px) {
+    order: 1;
+    margin-top: 150px;
+    margin-left: 0;
+    text-align: start;
+  }
+}
+
+.swiper__badge {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #7859cf;
@@ -71,21 +98,7 @@
   margin: 0 0 4px 0;
 }
 
-.slider__img {
-  margin-bottom: 5px;
-
-  @media (min-width: 768px) {
-    order: 1;
-    margin-bottom: 0;
-  }
-
-  @media (min-width: 1440px) {
-    order: 0;
-    margin: 0 30px 0 25px;
-  }
-}
-
-.slider__title {
+.swiper__title {
   margin: 0 0 10px 0;
   font-weight: 700;
   font-size: 36px;
@@ -100,7 +113,7 @@
   }
 }
 
-.slider__description {
+.swiper__description {
   margin: 0 0 20px 0;
   font-size: 14px;
   line-height: 20px;
@@ -114,6 +127,7 @@
     font-size: 20px;
     line-height: 32px;
     max-width: 580px;
+    margin: 0 auto 20px auto;
 
     & br {
       display: block;
@@ -122,10 +136,11 @@
 
   @media (min-width: 1440px) {
     margin-bottom: 40px;
+    margin-left: 0;
   }
 }
 
-.slider__buy {
+.swiper__buy {
   display: flex;
   flex-direction: row;
   max-width: 280px;
@@ -133,7 +148,7 @@
   margin: 0 auto;
 
   @media (min-width: 768px) {
-    margin-bottom: 20px;
+    margin-bottom: 0;
   }
 
   @media (min-width: 1440px) {
@@ -142,7 +157,7 @@
   }
 }
 
-.slider__price-old {
+.swiper__price-old {
   margin: auto 6px auto 0;
   text-decoration-line: line-through;
   font-size: 16px;
@@ -151,7 +166,7 @@
   max-width: 60px;
 }
 
-.slider__price {
+.swiper__price {
   margin: auto 20px auto 0;
   font-weight: 600;
   font-size: 20px;
@@ -159,7 +174,7 @@
   max-width: 60px;
 }
 
-.slider__order {
+.swiper__order {
   border-radius: 4px;
   border: none;
   padding: 8px 20px;
@@ -171,43 +186,49 @@
   max-width: 134px;
 }
 
-.slider__container {
+.swiper .swiper-button-prev::after,
+.swiper .swiper-button-next::after {
+  font-size: 20px;
+  color: #7859cf;
+}
+
+
+.swiper div.swiper-button-next {
+  right: 0;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  width: 20px;
+  height: 656px;
+
+  @media (min-width: 768px) {
+    width: 80px;
+    height: 640px;
+    padding: 0;
+  }
+
   @media (min-width: 1440px) {
-    margin-top: 150px;
-    text-align: start;
+    padding: 0;
+    height: 714px;
   }
 }
 
-.slider__step-container {
-  display: none;
-  flex-wrap: wrap;
-  gap: 8px;
-  position: absolute;
-  bottom: 60px;
-  left: 613px;
+.swiper div.swiper-button-prev {
+  left: 0;
+  top: 0;
+  padding: 318px 0;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+
+  @media (min-width: 768px) {
+    width: 80px;
+    height: 640px;
+    padding: 0;
+  }
 
   @media (min-width: 1440px) {
-    display: flex;
-  }
-}
-
-.slider__step {
-  width: 62px;
-  height: 24px;
-  background: #f3ebe1;
-  border: none;
-
-  &::after {
-    content: "";
-    display: block;
-    width: 62px;
-    height: 4px;
-    background: #ffffff;
-  }
-}
-
-.slider__step--current {
-  &::after {
-    background: #7859cf;
+    padding: 0;
+    height: 714px;
   }
 }
