--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,7 +11,7 @@
 @import "blocks/nav-menu";
 @import "blocks/nav-user";
 @import "blocks/visually-hidden";
-@import "blocks/slider";
+@import "blocks/swiper";
 @import "blocks/advantages";
 @import "blocks/advantages-card";
 @import "blocks/catalog";
