--- a/source/less/blocks/price-label.less
+++ b/source/less/blocks/price-label.less
@@ -34,3 +34,19 @@
     margin-right: 50px;
   }
 }
+
+.price-label__input:focus {
+  border: 2px solid #593cac;
+  outline: 0;
+}
+
+.price-label__input:active {
+  border: 2px solid #593cac;
+  outline: 0;
+}
+
+.price-label__input:disabled {
+  background: #f8f8f8;
+  border: 2px solid #e2e2e2;
+  color: #bdbdbd;
+}
