--- a/source/less/blocks/radio-label.less
+++ b/source/less/blocks/radio-label.less
@@ -85,6 +85,10 @@
   }
 }
 
+.radio-label__input:disabled ~ .radio-label__description {
+  color: #e2e2e2;
+}
+
 .radio-label__input:checked + .radio-label__mark {
   &::after {
     content: "";
