--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -35,3 +35,12 @@
   background: url("/img/arrow-down.png") no-repeat;
   background-position: 94% 50%;
 }
+
+.sort__select:hover {
+  background: #f0ebff;
+}
+
+.sort__select:focus {
+  background: #f0ebff;
+  outline: none;
+}
