--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -78,6 +78,19 @@
   border-radius: 4px;
   border: none;
   gap: 6px;
+
+  &:hover,
+  &:focus {
+    background: #9070ec;
+  }
+
+  &:active {
+    background: #593cac;
+  }
+
+  &:disabled {
+    background: #bdbdbd;
+  }
 }
 
 .card__button-description {
