--- a/source/less/blocks/filter-buttons.less
+++ b/source/less/blocks/filter-buttons.less
@@ -20,6 +20,22 @@
   border-radius: 4px;
   margin-bottom: 24px;
 
+  &:hover,
+  &:focus {
+    background: #9070ec;
+    color: #ffffff;
+  }
+
+  &:active {
+    background: #593cac;
+    color: #ffffff;
+  }
+
+  &:disabled {
+    background: #bdbdbd;
+    color: #ffffff;
+  }
+
   @media (min-width: 768px) {
     margin-bottom: 0;
     margin-left: 180px;
@@ -46,6 +62,22 @@
   border: none;
   color: #7859cf;
   border-radius: 4px;
+
+  &:hover,
+  &:focus {
+    background: #9070ec;
+    color: #ffffff;
+  }
+
+  &:active {
+    background: #593cac;
+    color: #ffffff;
+  }
+
+  &:disabled {
+    background: #bdbdbd;
+    color: #ffffff;
+  }
 
   @media (min-width: 768px) {
     width: 139px;
