--- a/source/less/blocks/price-label.less
+++ b/source/less/blocks/price-label.less
@@ -12,6 +12,10 @@
   box-sizing: border-box;
   text-align: center;
 
+  &::placeholder {
+    color: #bdbdbd;
+  }
+
   @media (min-width: 768px) {
     width: 92px;
     height: 40px;
