--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -22,6 +22,7 @@
 }
 
 .sort__select {
+  position: relative;
   padding: 4px 30px 4px 10px;
   max-width: 165px;
   min-height: 32px;
@@ -37,10 +38,18 @@
 }
 
 .sort__select:hover {
-  background: #f0ebff;
+  background: url("/img/arrow-down.png") no-repeat, #f0ebff;
+  background-position: 94% 50%;
 }
 
 .sort__select:focus {
-  background: #f0ebff;
+  background: url("/img/arrow-down.png") no-repeat, #f0ebff;
+  background-position: 94% 50%;
+  outline: none;
+}
+
+.sort__select:active {
+  background: url("/img/arrow-up.png") no-repeat;
+  background-position: 94% 50%;
   outline: none;
 }
