--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -7,7 +7,7 @@
   }
 
   @media (min-width: 1440px) {
-    padding: 40px;
+    padding: 39px 40px 40px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px 30px;
