--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -46,7 +46,7 @@
   color: #7859cf;
   border-radius: 4px;
 
-  &--current .pagination__button {
+  &--current .pagination__number {
     color: #333333;
     font-weight: 600;
     background: #f8f8f8;
@@ -63,6 +63,34 @@
       min-width: 104px;
     }
   }
+
+  & :hover,
+  & :focus {
+    background: #9070ec;
+    color: #ffffff;
+    border-radius: 4px;
+  }
+
+  & :active {
+    background: #593cac;
+    color: #ffffff;
+  }
+
+  & :disabled {
+    background: #e2e2e2;
+    color: #ffffff;
+  }
+}
+
+.pagination__button-svg {
+  border: none;
+  padding: 0;
+  border-radius: 4px;
+  display: flex;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
 .pagination__number {
@@ -73,6 +101,10 @@
   margin: 0;
   min-width: 40px;
   min-height: 40px;
+  border: none;
+  background-color: #ffffff;
+  border-radius: 4px;
+  color: #7859cf;
 }
 
 .pagination__previous,
@@ -87,5 +119,9 @@
     font-size: 16px;
     line-height: 24px;
     color: #7859cf;
+    max-width: 200px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    border: none;
   }
 }
