Исправляет по критериям

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -7,7 +7,7 @@
   }
 
   @media (min-width: 1440px) {
-    padding: 100px 40px 150px;
+    padding: 100px 40px 120px;
   }
 }
 
@@ -44,7 +44,6 @@
   @media (min-width: 1440px) {
     display: grid;
     grid-template-columns: 318px 1011px;
-    grid-template-rows: 26px 950px 40px;
     gap: 30px;
   }
 }
@@ -75,6 +74,7 @@
   margin: 0 0 40px 0;
   padding: 0;
   gap: 20px;
+  list-style-type: none;
 
 
   @media (min-width: 768px) {
@@ -88,6 +88,7 @@
     grid-column: 2/3;
     grid-row: 2/3;
     grid-row-gap: 33px;
+    margin-bottom: 4px;
   }
 }
 
