--- a/source/less/blocks/filter-buttons.less
+++ b/source/less/blocks/filter-buttons.less
@@ -2,9 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
 
   @media (min-width: 768px) {
     flex-direction: row;
+    justify-content: center;
+    padding-right: 50px;
+  }
+
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    justify-content: center;
+    padding-right: 0;
   }
 }
 
@@ -18,7 +28,7 @@
   border: none;
   color: #ffffff;
   border-radius: 4px;
-  margin-bottom: 24px;
+  margin-bottom: 0;
 
   &:hover,
   &:focus {
@@ -37,17 +47,16 @@
   }
 
   @media (min-width: 768px) {
+    gap: 20px;
     margin-bottom: 0;
-    margin-left: 180px;
-    margin-right: 29px;
     width: 148px;
     min-height: 40px;
   }
 
   @media (min-width: 1440px) {
+    gap: 0;
     margin-left: 0;
     width: 153px;
-    margin-right: 15px;
     font-size: 14px;
   }
 }
