--- a/source/less/blocks/header-logo.less
+++ b/source/less/blocks/header-logo.less
@@ -11,7 +11,7 @@
 
   @media (min-width: 1440px) {
     width: 170px;
-    padding: 22px 40px;
+    padding: 22px 308px 22px 40px;
 
     &::after {
       content: "Интернет-магазин кофейных напитков";
