--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -15,3 +15,11 @@
     height: 540px;
   }
 }
+
+.map__container--no-js {
+  display: none;
+}
+
+.map__container-image--no-js {
+  display: none;
+}
