--- a/source/less/blocks/milk.less
+++ b/source/less/blocks/milk.less
@@ -1,6 +1,10 @@
 .milk {
   padding: 0;
   border: 0;
+
+  @media (min-width: 768px) {
+    width: 210px;
+  }
 }
 
 .milk__title {
@@ -19,6 +23,7 @@
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 23px;
+  list-style-type: none;
 
   & li:last-child {
     margin-bottom: 0;
