--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -1,11 +1,14 @@
 .sort {
   display: flex;
   margin: 0 0 16px 0;
-  padding-left: 3px;
 
   @media (min-width: 768px) {
     justify-content: end;
     margin-bottom: 27px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-bottom: -8px;
   }
 }
 
