--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -49,6 +49,8 @@
   flex-wrap: wrap;
   flex-direction: column;
   gap: 32px;
+  list-style-type: none;
+  padding-left: 0;
 
   @media (min-width: 768px) {
     flex-direction: row;
