--- a/source/less/blocks/checkbox-label.less
+++ b/source/less/blocks/checkbox-label.less
@@ -26,7 +26,7 @@
   height: 20px;
   background: #ffffff;
   border-radius: 50%;
-  bottom: 2px;
+  top: 2px;
   left: 2px;
 }
 
@@ -44,7 +44,7 @@
     height: 20px;
     background: #ffffff;
     border-radius: 50%;
-    bottom: 2px;
+    top: 2px;
     left: 2px;
   }
 }
@@ -63,7 +63,7 @@
     height: 20px;
     background: #ffffff;
     border-radius: 50%;
-    bottom: 2px;
+    top: 2px;
     left: 2px;
   }
 }
@@ -80,7 +80,7 @@
     height: 20px;
     background: #f8f8f8;
     border-radius: 50%;
-    bottom: 2px;
+    top: 2px;
     left: 2px;
   }
 }
@@ -103,7 +103,7 @@
     height: 20px;
     background: #bdbdbd;
     border-radius: 50%;
-    bottom: 2px;
+    top: 2px;
     right: 2px;
   }
 }
@@ -119,6 +119,6 @@
   height: 20px;
   background: #ffffff;
   border-radius: 50%;
-  bottom: 2px;
+  top: 2px;
   left: 20px;
 }
