--- a/source/less/blocks/country.less
+++ b/source/less/blocks/country.less
@@ -4,6 +4,10 @@
   padding-left: 2px;
   margin: 0;
 
+  @media (min-width: 768px) {
+    width: 197px;
+  }
+
   @media (min-width: 1440px) {
     padding-left: 0;
   }
@@ -21,6 +25,7 @@
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 34px;
+  list-style-type: none;
 
   & li:last-child {
     margin-bottom: 0;
