--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -37,6 +37,8 @@
   flex-direction: column;
   margin-bottom: 20px;
   margin-top: 0;
+  list-style-type: none;
+  padding-left: 0;
 
   @media (min-width: 768px) {
     flex-direction: row;
