--- a/source/less/blocks/nav-menu.less
+++ b/source/less/blocks/nav-menu.less
@@ -13,9 +13,11 @@
 .nav-menu__list {
   padding: 0;
   margin: 0;
+  list-style-type: none;
 
   @media (min-width: 768px) {
     display: flex;
+    flex-wrap: wrap;
   }
 
   @media (min-width: 1440px) {
@@ -61,11 +63,11 @@
     @media (min-width: 768px) {
       content: "";
       position: absolute;
-      width: 103px;
       height: 2px;
       background: #7859cf;
       bottom: 0;
       left: 0;
+      right: 0;
     }
   }
 
