--- a/source/less/blocks/nav-user.less
+++ b/source/less/blocks/nav-user.less
@@ -16,6 +16,7 @@
   display: flex;
   padding-left: 0;
   flex-wrap: wrap;
+  list-style-type: none;
 
   @media (min-width: 1440px) {
     gap: 20px;
