--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -5,6 +5,7 @@
   padding: 0;
   margin: 0;
   gap: 20px;
+  list-style-type: none;
 
   @media (min-width: 768px) {
     justify-content: end;
@@ -32,6 +33,7 @@
   padding: 0;
   font-size: 16px;
   line-height: 24px;
+  word-break: break-word;
 }
 
 .pagination__item {
@@ -41,7 +43,7 @@
   font-size: 16px;
   line-height: 24px;
   width: 40px;
-  height: 40px;
+  min-height: 40px;
   background: #ffffff;
   color: #7859cf;
   border-radius: 4px;
