--- a/source/less/blocks/price-label.less
+++ b/source/less/blocks/price-label.less
@@ -16,6 +16,16 @@
     color: #bdbdbd;
   }
 
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
   @media (min-width: 768px) {
     width: 92px;
     height: 40px;
